compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_array_binary.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case <<1>> { <<a:bytes>> if a > 1 -> 1 _ -> 2 }"
---
----- SOURCE CODE
case <<1>> { <<a:bytes>> if a > 1 -> 1 _ -> 2 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:29
  │
1 │ case <<1>> { <<a:bytes>> if a > 1 -> 1 _ -> 2 }
  │                             ^

Expected type:

    Int

Found type:

    BitArray
