compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_array_guard.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case <<1>> { <<a:utf16_codepoint>> if a == \"test\" -> 1 _ -> 2 }"
---
----- SOURCE CODE
case <<1>> { <<a:utf16_codepoint>> if a == "test" -> 1 _ -> 2 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:44
  │
1 │ case <<1>> { <<a:utf16_codepoint>> if a == "test" -> 1 _ -> 2 }
  │                                            ^^^^^^

Expected type:

    UtfCodepoint

Found type:

    String
